# optimus

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: quickstart.py
src/meeting_intel/: __init__.py  ami.py  bert.py  category.py  cli.py  coaching.py  config.py  data.py  evaluate.py  features.py  llm.py  pipeline.py  preprocessing.py  scale.py  schema.py  sentiment.py  summarize.py  synth.py  training.py
tests/: test_ami_adapter.py  test_category.py  test_da.py  test_splits.py  test_summarize_coaching.py
