[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meeting-intel"
version = "0.2.0"
description = "Leakage-safe meeting intelligence: discussion-category classification, client sentiment, summarization, and evidence-grounded coaching."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Issam" }]
keywords = ["nlp", "meetings", "sentiment", "summarization", "machine-learning"]
dependencies = [
    "scikit-learn>=1.3",
    "pandas>=2.0",
    "numpy>=1.24",
    "joblib>=1.3",
]

[project.optional-dependencies]
# Pretrained sentiment + abstractive summarization backends.
transformers = ["transformers>=4.40", "torch>=2.2"]
fewshot = ["setfit>=1.0"]
llm = ["anthropic>=0.40"]
eval = ["rouge-score>=0.1.2"]
scale = ["dask[distributed]>=2024.1"]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
meeting-intel = "meeting_intel.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
